--- a/index.html
+++ b/index.html
@@ -1,17 +1,45 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>かんたんレシピ</title>
   <style>
     body {
       font-family: "Hiragino Kaku Gothic ProN", sans-serif;
       background-color: #fff8f0;
       text-align: center;
+      margin: 0;
+      padding: 0;
     }
 
     h1 {
       color: #ff8c8c;
+      margin-top: 30px;
+    }
+
+    #search {
+      margin-top: 20px;
+      padding: 10px;
+      width: 70%;
+      max-width: 300px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    #searchBtn {
+      padding: 10px 15px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: none;
+      background-color: #ff8c8c;
+      color: white;
+      cursor: pointer;
+      margin-left: 10px;
+    }
+
+    #searchBtn:hover {
+      background-color: #e06666;
     }
 
     .recipe-container {
@@ -19,7 +47,7 @@
       justify-content: center;
       flex-wrap: wrap;
       gap: 20px;
-      margin-top: 30px;
+      padding: 30px;
     }
 
     .recipe {
@@ -27,8 +55,9 @@
       border-radius: 10px;
       background: #fff;
       padding: 10px;
-      width: 200px;
+      width: 280px;
       box-shadow: 2px 2px 5px #ccc;
+      box-sizing: border-box;
     }
 
     .recipe img {
@@ -41,6 +70,28 @@
       display: none;
       margin-top: 10px;
       text-align: left;
+      max-height: 300px;
+      overflow-y: auto;
+      padding-right: 10px;
+    }
+
+    .ingredients label {
+      display: block;
+      margin-bottom: 5px;
+      cursor: pointer;
+      user-select: none;
+    }
+
+    @media screen and (max-width: 900px) {
+      .recipe {
+        width: 45%;
+      }
+    }
+
+    @media screen and (max-width: 600px) {
+      .recipe {
+        width: 100%;
+      }
     }
   </style>
 </head>
@@ -48,60 +99,139 @@
 
   <h1>🍳 なな。のお得意料理</h1>
 
+  <!-- 検索バー＆ボタン -->
+  <input type="text" id="search" placeholder="料理名で検索（例：肉・パスタ など）" />
+  <button id="searchBtn">検索</button>
+
   <div class="recipe-container">
-    <!-- レシピ1 -->
-    <div class="recipe">
-      <img src="https://i.ytimg.com/vi/h67vdKlPGzg/hqdefault.jpg?sqp=-oaymwEnCNACELwBSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLC38lSR7ejsH21Yfl8OUVczViridw" alt="肉じゃが" onclick="toggleIngredients('ingredients1')">
-      <h3>至高の無水肉じゃが（2～3人前）</h3>
-      <ul id="ingredients1" class="ingredients">
-        <li>豚バラ　250g</li>
-        <li>ジャガイモ　400g</li>
-        <li>人参　300g</li>
-        <li>玉ねぎ　250g</li>
-        <li>白滝　200g</li>
-        <li>生姜　15g</li>
-	<li>ゴマ油　大さじ1半</li>
-	<li>塩胡椒　適量</li>
-	<li>醤油　大さじ４</li>
-	<li>酒　大さじ６</li>
-	<li>白だし　大さじ2</li>
-	<li>砂糖　大さじ2</li>
-      </ul>
+
+    <!-- 肉じゃが -->
+    <div class="recipe" data-title="肉じゃが">
+      <img src="https://i.ytimg.com/vi/h67vdKlPGzg/hqdefault.jpg" alt="肉じゃが" onclick="toggleIngredients('ingredients1')" />
+      <h3>肉じゃが</h3>
+      <div id="ingredients1" class="ingredients">
+        <label><input type="checkbox" /> 豚バラ　250g</label>
+        <label><input type="checkbox" /> ジャガイモ　400g</label>
+        <label><input type="checkbox" /> 人参　300g</label>
+        <label><input type="checkbox" /> 玉ねぎ　250g</label>
+        <label><input type="checkbox" /> 白滝　200g</label>
+        <label><input type="checkbox" /> 生姜　15g</label>
+        <label><input type="checkbox" /> ゴマ油　大さじ1半</label>
+        <label><input type="checkbox" /> 塩胡椒　適量</label>
+        <label><input type="checkbox" /> 醤油　大さじ4</label>
+        <label><input type="checkbox" /> 酒　大さじ6</label>
+        <label><input type="checkbox" /> 白だし　大さじ2</label>
+        <label><input type="checkbox" /> 砂糖　大さじ2</label>
+      </div>
     </div>
 
-    <!-- レシピ2 -->
-    <div class="recipe">
-      <img src="https://www.kurashiru.com/assets/top/recipes/2.jpg" alt="親子丼" onclick="toggleIngredients('ingredients2')">
-      <h3>ふわとろ親子丼</h3>
-      <ul id="ingredients2" class="ingredients">
-        <li>鶏もも肉 150g</li>
-        <li>玉ねぎ 1/2個</li>
-        <li>卵 2個</li>
-        <li>めんつゆ 大さじ2</li>
-        <li>水 100ml</li>
-        <li>ごはん 茶碗1杯</li>
-      </ul>
+    <!-- 豚汁 -->
+    <div class="recipe" data-title="豚汁">
+      <img src="https://i.ytimg.com/vi/OL8o03u8l2Y/hqdefault.jpg" alt="豚汁" onclick="toggleIngredients('ingredients2')" />
+      <h3>豚汁🐷</h3>
+      <div id="ingredients2" class="ingredients">
+        <label><input type="checkbox" /> 豚バラ　280g</label>
+        <label><input type="checkbox" /> 塩　1つまみ</label>
+        <label><input type="checkbox" /> 胡椒　適量</label>
+        <label><input type="checkbox" /> ゴボウ　150g</label>
+        <label><input type="checkbox" /> 大根　200g</label>
+        <label><input type="checkbox" /> こんにゃく　250g</label>
+        <label><input type="checkbox" /> にんじん　100g</label>
+        <label><input type="checkbox" /> 生姜　10g</label>
+        <label><input type="checkbox" /> にんにく　2片</label>
+        <label><input type="checkbox" /> 長ネギ　1本</label>
+        <label><input type="checkbox" /> ゴマ油　大さじ1</label>
+        <label><input type="checkbox" /> 水　1リットル</label>
+        <label><input type="checkbox" /> 白だし　大さじ4</label>
+        <label><input type="checkbox" /> 味噌　大さじ4</label>
+        <label><input type="checkbox" /> みりん　大さじ2</label>
+        <label><input type="checkbox" /> 酒　大さじ2</label>
+      </div>
     </div>
 
-    <!-- レシピ3 -->
-    <div class="recipe">
-      <img src="https://www.kurashiru.com/assets/top/recipes/3.jpg" alt="サラダ" onclick="toggleIngredients('ingredients3')">
-      <h3>ツナコーンサラダ</h3>
-      <ul id="ingredients3" class="ingredients">
-        <li>レタス 適量</li>
-        <li>ツナ缶 1缶</li>
-        <li>コーン 大さじ3</li>
-        <li>マヨネーズ 大さじ1</li>
-        <li>塩こしょう 少々</li>
-      </ul>
+    <!-- テリヤキ -->
+    <div class="recipe" data-title="テリヤキ">
+      <img src="https://i.ytimg.com/vi/6kHSpe8hRjo/hqdefault.jpg" alt="テリヤキ" onclick="toggleIngredients('ingredients3')" />
+      <h3>テリヤキ</h3>
+      <div id="ingredients3" class="ingredients">
+        <label><input type="checkbox" /> 鶏もも肉　300g</label>
+        <label><input type="checkbox" /> 塩胡椒　適量</label>
+        <label><input type="checkbox" /> 片栗粉　小さじ2</label>
+        <label><input type="checkbox" /> サラダ油　小さじ1</label>
+        <label><input type="checkbox" /> 醤油　大さじ1半</label>
+        <label><input type="checkbox" /> 酒　大さじ1半</label>
+        <label><input type="checkbox" /> みりん　大さじ1半</label>
+        <label><input type="checkbox" /> 砂糖　小さじ1半</label>
+        <label><input type="checkbox" /> 味の素　3振り</label>
+      </div>
     </div>
+
+    <!-- 納豆パスタ -->
+    <div class="recipe" data-title="納豆パスタ">
+      <img src="https://i.ytimg.com/vi/aEG6nutUySY/hqdefault.jpg" alt="納豆パスタ" onclick="toggleIngredients('ingredients4')" />
+      <h3>納豆パスタ</h3>
+      <div id="ingredients4" class="ingredients">
+        <label><input type="checkbox" /> 水　320cc</label>
+        <label><input type="checkbox" /> 醤油　小さじ2</label>
+        <label><input type="checkbox" /> 味の素　4振り</label>
+        <label><input type="checkbox" /> 塩　1つまみ</label>
+        <label><input type="checkbox" /> パスタ　100g</label>
+        <label><input type="checkbox" /> バター　10g</label>
+        <label><input type="checkbox" /> 納豆　1パック</label>
+      </div>
+    </div>
+
+    <!-- 生姜焼き -->
+    <div class="recipe" data-title="生姜焼き">
+      <img src="https://i.ytimg.com/vi/WXblKAxLmnE/hqdefault.jpg" alt="生姜焼き" onclick="toggleIngredients('ingredients5')" />
+      <h3>生姜焼き</h3>
+      <div id="ingredients5" class="ingredients">
+        <label><input type="checkbox" /> 豚コマ肉　220g</label>
+        <label><input type="checkbox" /> 玉ねぎ　1/2個</label>
+        <label><input type="checkbox" /> 生姜　15g</label>
+        <label><input type="checkbox" /> 小麦粉　大さじ1半</label>
+        <label><input type="checkbox" /> サラダ油　大さじ1強</label>
+        <label><input type="checkbox" /> 塩胡椒　少々</label>
+        <label><input type="checkbox" /> 酒　大さじ2</label>
+        <label><input type="checkbox" /> みりん　小さじ2</label>
+        <label><input type="checkbox" /> 醤油　大さじ1半</label>
+        <label><input type="checkbox" /> 砂糖　小さじ1半</label>
+        <label><input type="checkbox" /> 味の素　4振り</label>
+      </div>
+    </div>
+
   </div>
 
   <script>
+    // 材料の表示切替
     function toggleIngredients(id) {
       const el = document.getElementById(id);
       el.style.display = (el.style.display === "block") ? "none" : "block";
     }
+
+    // 検索処理
+    function doSearch() {
+      const keyword = document.getElementById('search').value.toLowerCase();
+      const recipes = document.querySelectorAll('.recipe');
+      recipes.forEach(recipe => {
+        const title = recipe.getAttribute('data-title').toLowerCase();
+        if (title.includes(keyword)) {
+          recipe.style.display = 'block';
+        } else {
+          recipe.style.display = 'none';
+        }
+      });
+    }
+
+    // 検索ボタン押下で実行
+    document.getElementById('searchBtn').addEventListener('click', doSearch);
+
+    // エンターキー押下でも検索実行（任意）
+    document.getElementById('search').addEventListener('keydown', function(e) {
+      if (e.key === 'Enter') {
+        doSearch();
+      }
+    });
   </script>
 
 </body>
