--- a/index.html
+++ b/index.html
@@ -1,112 +1,118 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <title>かんたんレシピ</title>
-  <style>
-    body {
-      font-family: "Hiragino Kaku Gothic ProN", sans-serif;
-      background-color: #fff8f0;
-      text-align: center;
-      margin: 0;
-      padding: 0;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>かんたんレシピ</title>
+<style>
+  body {
+    font-family: "Hiragino Kaku Gothic ProN", sans-serif, sans-serif;
+    background-color: #fff8f0;
+    margin: 0;
+    padding: 15px;
+    text-align: center;
+    font-size: 18px;
+    color: #333;
+  }
+  h1 {
+    color: #ff8c8c;
+    margin-bottom: 20px;
+  }
+  #search {
+    width: 70%;
+    max-width: 400px;
+    padding: 14px 12px;
+    font-size: 18px;
+    border: 2px solid #ff8c8c;
+    border-radius: 8px;
+    outline: none;
+    box-sizing: border-box;
+  }
+  #searchBtn {
+    padding: 14px 20px;
+    font-size: 18px;
+    margin-left: 8px;
+    border-radius: 8px;
+    border: none;
+    background-color: #ff8c8c;
+    color: white;
+    cursor: pointer;
+    vertical-align: middle;
+  }
+  #searchBtn:active {
+    background-color: #e06666;
+  }
 
-    h1 {
-      color: #ff8c8c;
-      margin-top: 30px;
-    }
+  .recipe-container {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+  }
 
-    #search {
-      margin-top: 20px;
-      padding: 10px;
-      width: 70%;
-      max-width: 300px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
+  .recipe {
+    width: 100%;
+    max-width: 450px;
+    border: 1px solid #ddd;
+    border-radius: 12px;
+    background: #fff;
+    padding: 16px;
+    box-shadow: 2px 2px 7px #ccc;
+    box-sizing: border-box;
+    text-align: left;
+  }
 
-    #searchBtn {
-      padding: 10px 15px;
-      font-size: 16px;
-      border-radius: 5px;
-      border: none;
-      background-color: #ff8c8c;
-      color: white;
-      cursor: pointer;
-      margin-left: 10px;
-    }
+  .recipe img {
+    width: 100%;
+    border-radius: 12px;
+    cursor: pointer;
+    display: block;
+    margin-bottom: 12px;
+    user-select: none;
+  }
 
-    #searchBtn:hover {
-      background-color: #e06666;
-    }
+  .recipe h3 {
+    margin: 0 0 10px 0;
+    font-size: 22px;
+    color: #ff6f6f;
+  }
 
-    .recipe-container {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      padding: 30px;
-    }
+  .ingredients {
+    display: none;
+    max-height: 280px;
+    overflow-y: auto;
+    padding-right: 12px;
+    margin-top: 8px;
+  }
 
-    .recipe {
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      background: #fff;
-      padding: 10px;
-      width: 280px;
-      box-shadow: 2px 2px 5px #ccc;
-      box-sizing: border-box;
-    }
-
-    .recipe img {
-      width: 100%;
-      border-radius: 10px;
-      cursor: pointer;
-    }
-
-    .ingredients {
-      display: none;
-      margin-top: 10px;
-      text-align: left;
-      max-height: 300px;
-      overflow-y: auto;
-      padding-right: 10px;
-    }
-
-    .ingredients label {
-      display: block;
-      margin-bottom: 5px;
-      cursor: pointer;
-      user-select: none;
-    }
-
-    @media screen and (max-width: 900px) {
-      .recipe {
-        width: 45%;
-      }
-    }
-
-    @media screen and (max-width: 600px) {
-      .recipe {
-        width: 100%;
-      }
-    }
-  </style>
+  .ingredients label {
+    display: block;
+    font-size: 17px;
+    padding: 8px 5px;
+    cursor: pointer;
+    user-select: none;
+  }
+  .ingredients label input[type="checkbox"] {
+    transform: scale(1.3);
+    margin-right: 12px;
+    vertical-align: middle;
+  }
+</style>
 </head>
 <body>
 
   <h1>🍳 なな。のお得意料理</h1>
 
-  <!-- 検索バー＆ボタン -->
-  <input type="text" id="search" placeholder="料理名で検索（例：肉・パスタ など）" />
-  <button id="searchBtn">検索</button>
+  <div>
+    <input type="text" id="search" placeholder="料理名で検索（例：しょうがやき、パスタ）" />
+    <button id="searchBtn">検索</button>
+  </div>
 
   <div class="recipe-container">
 
     <!-- 肉じゃが -->
-    <div class="recipe" data-title="肉じゃが">
+    <div class="recipe" data-title="肉じゃが" data-hiragana="にくじゃが">
       <img src="https://i.ytimg.com/vi/h67vdKlPGzg/hqdefault.jpg" alt="肉じゃが" onclick="toggleIngredients('ingredients1')" />
       <h3>肉じゃが</h3>
       <div id="ingredients1" class="ingredients">
@@ -126,7 +132,7 @@
     </div>
 
     <!-- 豚汁 -->
-    <div class="recipe" data-title="豚汁">
+    <div class="recipe" data-title="豚汁" data-hiragana="とんじる">
       <img src="https://i.ytimg.com/vi/OL8o03u8l2Y/hqdefault.jpg" alt="豚汁" onclick="toggleIngredients('ingredients2')" />
       <h3>豚汁🐷</h3>
       <div id="ingredients2" class="ingredients">
@@ -150,7 +156,7 @@
     </div>
 
     <!-- テリヤキ -->
-    <div class="recipe" data-title="テリヤキ">
+    <div class="recipe" data-title="テリヤキ" data-hiragana="てりやき">
       <img src="https://i.ytimg.com/vi/6kHSpe8hRjo/hqdefault.jpg" alt="テリヤキ" onclick="toggleIngredients('ingredients3')" />
       <h3>テリヤキ</h3>
       <div id="ingredients3" class="ingredients">
@@ -167,7 +173,7 @@
     </div>
 
     <!-- 納豆パスタ -->
-    <div class="recipe" data-title="納豆パスタ">
+    <div class="recipe" data-title="納豆パスタ" data-hiragana="なっとうぱすた">
       <img src="https://i.ytimg.com/vi/aEG6nutUySY/hqdefault.jpg" alt="納豆パスタ" onclick="toggleIngredients('ingredients4')" />
       <h3>納豆パスタ</h3>
       <div id="ingredients4" class="ingredients">
@@ -182,7 +188,7 @@
     </div>
 
     <!-- 生姜焼き -->
-    <div class="recipe" data-title="生姜焼き">
+    <div class="recipe" data-title="生姜焼き" data-hiragana="しょうがやき">
       <img src="https://i.ytimg.com/vi/WXblKAxLmnE/hqdefault.jpg" alt="生姜焼き" onclick="toggleIngredients('ingredients5')" />
       <h3>生姜焼き</h3>
       <div id="ingredients5" class="ingredients">
@@ -202,37 +208,54 @@
 
   </div>
 
-  <script>
-    // 材料の表示切替
-    function toggleIngredients(id) {
-      const el = document.getElementById(id);
-      el.style.display = (el.style.display === "block") ? "none" : "block";
-    }
+<script>
+  // カタカナ→ひらがな変換関数（検索語用）
+  function katakanaToHiragana(str) {
+    return str.replace(/[\u30a1-\u30f6]/g, ch =>
+      String.fromCharCode(ch.charCodeAt(0) - 0x60)
+    );
+  }
 
-    // 検索処理
-    function doSearch() {
-      const keyword = document.getElementById('search').value.toLowerCase();
-      const recipes = document.querySelectorAll('.recipe');
-      recipes.forEach(recipe => {
-        const title = recipe.getAttribute('data-title').toLowerCase();
-        if (title.includes(keyword)) {
-          recipe.style.display = 'block';
-        } else {
-          recipe.style.display = 'none';
-        }
-      });
-    }
+  // 材料の表示切替
+  function toggleIngredients(id) {
+    const el = document.getElementById(id);
+    if (!el) return;
+    el.style.display = (el.style.display === "block") ? "none" : "block";
+  }
 
-    // 検索ボタン押下で実行
-    document.getElementById('searchBtn').addEventListener('click', doSearch);
+  // 検索実行
+  function doSearch() {
+    const input = document.getElementById('search').value.toLowerCase();
+    const keyword = katakanaToHiragana(input);
+    const recipes = document.querySelectorAll('.recipe');
 
-    // エンターキー押下でも検索実行（任意）
-    document.getElementById('search').addEventListener('keydown', function(e) {
-      if (e.key === 'Enter') {
-        doSearch();
+    recipes.forEach(recipe => {
+      const title = recipe.getAttribute('data-title').toLowerCase();
+      const hiragana = recipe.getAttribute('data-hiragana').toLowerCase();
+      const titleHira = katakanaToHiragana(title);
+
+      if (
+        title.includes(keyword) ||
+        hiragana.includes(keyword) ||
+        titleHira.includes(keyword)
+      ) {
+        recipe.style.display = 'block';
+      } else {
+        recipe.style.display = 'none';
       }
     });
-  </script>
+  }
+
+  // ボタン押下で検索
+  document.getElementById('searchBtn').addEventListener('click', doSearch);
+
+  // エンターキーでも検索実行
+  document.getElementById('search').addEventListener('keydown', e => {
+    if (e.key === 'Enter') {
+      doSearch();
+    }
+  });
+</script>
 
 </body>
 </html>
