--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </head>
 <body>
 
-  <h1>🍳 なな。のお得意料理</h1>
+  <h1>な。のお買い物リスト</h1>
 
   <div>
     <input type="text" id="search" placeholder="料理名で検索（例：しょうがやき、パスタ）" />
